imgui-sys2/third-party/imgui-master/cimgui.h


typedef struct ImVec2_t ImVec2;
typedef struct ImVec4_t ImVec4;
typedef struct ImVector_ImGuiTextFilter_ImGuiTextRange_t
    ImVector_ImGuiTextFilter_ImGuiTextRange;
typedef struct ImVector_char_t ImVector_char;
typedef struct ImVector_ImGuiStorage_ImGuiStoragePair_t
    ImVector_ImGuiStorage_ImGuiStoragePair;
typedef struct ImVector_ImDrawCmd_t ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawVert_t ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t ImVector_ImVec2;
typedef struct ImGuiTextFilter_ImGuiTextRange_t ImGuiTextFilter_ImGuiTextRange;
typedef struct ImGuiStorage_ImGuiStoragePair_t ImGuiStorage_ImGuiStoragePair;
typedef struct ImDrawCmdHeader_t ImDrawCmdHeader;
typedef struct ImDrawChannel_t
    ImDrawChannel; 
typedef struct ImDrawCmd_t
    ImDrawCmd; 
typedef struct ImDrawList_t
    ImDrawList; 
typedef struct ImDrawListSharedData_t
    ImDrawListSharedData; 
typedef struct ImDrawListSplitter_t
    ImDrawListSplitter; 
typedef struct ImDrawVert_t
    ImDrawVert; 
typedef struct ImColor_t
    ImColor; 
typedef struct ImGuiContext_t
    ImGuiContext; 
typedef struct ImGuiListClipper_t
    ImGuiListClipper; 
typedef struct ImGuiStorage_t ImGuiStorage; 
typedef struct ImGuiTableSortSpecs_t
    ImGuiTableSortSpecs; 
typedef struct ImGuiTableColumnSortSpecs_t
    ImGuiTableColumnSortSpecs; 
typedef struct ImGuiTextBuffer_t
    ImGuiTextBuffer; 
typedef struct ImGuiTextFilter_t
    ImGuiTextFilter; 
typedef int ImGuiSortDirection; 
typedef int ImDrawListFlags;     
typedef void
    *ImTextureID; 
typedef unsigned short ImDrawIdx; 
typedef unsigned int ImGuiID; 
typedef signed short ImS16;   
typedef unsigned int
    ImU32; 
IM_MSVC_RUNTIME_CHECKS_OFF
typedef struct ImVec2_t {
  float x, y;
} ImVec2;
typedef struct ImVec4_t {
  float x, y, z, w;
} ImVec4;
CIMGUI_API bool ImGui_ComboCallback(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count); 
CIMGUI_API bool ImGui_ComboCallbackEx(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count, int popup_max_height_in_items );
CIMGUI_API bool ImGui_ListBoxCallback(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count); 
CIMGUI_API bool ImGui_ListBoxCallbackEx(
    const char *label, int *current_item,
    bool (*items_getter)(void *data, int idx, const char **out_text),
    void *data, int items_count, int height_in_items );
typedef struct ImVector_ImGuiTextFilter_ImGuiTextRange_t {
  int Size;
  int Capacity;
  ImGuiTextFilter_ImGuiTextRange *Data;
} ImVector_ImGuiTextFilter_ImGuiTextRange;
typedef struct ImVector_char_t {
  int Size;
  int Capacity;
  char *Data;
} ImVector_char;
typedef struct ImVector_ImGuiStorage_ImGuiStoragePair_t {
  int Size;
  int Capacity;
  ImGuiStorage_ImGuiStoragePair *Data;
} ImVector_ImGuiStorage_ImGuiStoragePair;
typedef struct ImVector_ImDrawCmd_t {
  int Size;
  int Capacity;
  ImDrawCmd *Data;
} ImVector_ImDrawCmd;
typedef struct ImVector_ImDrawIdx_t {
  int Size;
  int Capacity;
  ImDrawIdx *Data;
} ImVector_ImDrawIdx;
typedef struct ImVector_ImDrawVert_t {
  int Size;
  int Capacity;
  ImDrawVert *Data;
} ImVector_ImDrawVert;
typedef struct ImVector_ImVec4_t {
  int Size;
  int Capacity;
  ImVec4 *Data;
} ImVector_ImVec4;
typedef struct ImVector_ImTextureID_t {
  int Size;
  int Capacity;
  ImTextureID *Data;
} ImVector_ImTextureID;
typedef struct ImVector_ImVec2_t {
  int Size;
  int Capacity;
  ImVec2 *Data;
} ImVector_ImVec2;
typedef struct ImGuiTableColumnSortSpecs_t {
  ImGuiID ColumnUserID; 
  ImS16 ColumnIndex;    
  ImS16 SortOrder; 
  ImGuiSortDirection
      SortDirection : 8; 
} ImGuiTableColumnSortSpecs;
typedef struct ImGuiTableSortSpecs_t {
  const ImGuiTableColumnSortSpecs *Specs; 
  int SpecsCount;  
  bool SpecsDirty; 
} ImGuiTableSortSpecs;
typedef struct ImGuiTextFilter_ImGuiTextRange_t {
  const char *b;
  const char *e;
} ImGuiTextFilter_ImGuiTextRange;
CIMGUI_API bool ImGuiTextFilter_ImGuiTextRange_empty(
    const ImGuiTextFilter_ImGuiTextRange *self);
CIMGUI_API void ImGuiTextFilter_ImGuiTextRange_split(
    const ImGuiTextFilter_ImGuiTextRange *self, char separator,
    ImVector_ImGuiTextFilter_ImGuiTextRange *out);
typedef struct ImGuiTextFilter_t {
  char InputBuf[256];
  ImVector_ImGuiTextFilter_ImGuiTextRange Filters;
  int CountGrep;
} ImGuiTextFilter;
CIMGUI_API bool ImGuiTextFilter_Draw(
    ImGuiTextFilter *self, const char *label ,
    float width ); 
CIMGUI_API bool ImGuiTextFilter_PassFilter(const ImGuiTextFilter *self,
                                           const char *text,
                                           const char *text_end );
CIMGUI_API void ImGuiTextFilter_Build(ImGuiTextFilter *self);
CIMGUI_API void ImGuiTextFilter_Clear(ImGuiTextFilter *self);
CIMGUI_API bool ImGuiTextFilter_IsActive(const ImGuiTextFilter *self);
typedef struct ImGuiTextBuffer_t {
  ImVector_char Buf;
} ImGuiTextBuffer;
CIMGUI_API const char *ImGuiTextBuffer_begin(const ImGuiTextBuffer *self);
CIMGUI_API const char *ImGuiTextBuffer_end(
    const ImGuiTextBuffer *self); 
CIMGUI_API int ImGuiTextBuffer_size(const ImGuiTextBuffer *self);
CIMGUI_API bool ImGuiTextBuffer_empty(const ImGuiTextBuffer *self);
CIMGUI_API void ImGuiTextBuffer_clear(ImGuiTextBuffer *self);
CIMGUI_API void ImGuiTextBuffer_reserve(ImGuiTextBuffer *self, int capacity);
CIMGUI_API const char *ImGuiTextBuffer_c_str(const ImGuiTextBuffer *self);
CIMGUI_API void ImGuiTextBuffer_append(ImGuiTextBuffer *self, const char *str,
                                       const char *str_end );
CIMGUI_API void ImGuiTextBuffer_appendfv(ImGuiTextBuffer *self, const char *fmt,
                                         va_list args) IM_FMTLIST(2);
typedef struct ImGuiStorage_ImGuiStoragePair_t {
  ImGuiID key;
  union {
    int val_i;
    float val_f;
    void *val_p;
  };
} ImGuiStorage_ImGuiStoragePair;
typedef struct ImGuiStorage_t {
  ImVector_ImGuiStorage_ImGuiStoragePair Data;
} ImGuiStorage;
CIMGUI_API void ImGuiStorage_Clear(ImGuiStorage *self);
CIMGUI_API int ImGuiStorage_GetInt(const ImGuiStorage *self, ImGuiID key,
                                   int default_val );
CIMGUI_API void ImGuiStorage_SetInt(ImGuiStorage *self, ImGuiID key, int val);
CIMGUI_API bool ImGuiStorage_GetBool(const ImGuiStorage *self, ImGuiID key,
                                     bool default_val );
CIMGUI_API void ImGuiStorage_SetBool(ImGuiStorage *self, ImGuiID key, bool val);
CIMGUI_API float ImGuiStorage_GetFloat(const ImGuiStorage *self, ImGuiID key,
                                       float default_val );
CIMGUI_API void ImGuiStorage_SetFloat(ImGuiStorage *self, ImGuiID key,
                                      float val);
CIMGUI_API void *ImGuiStorage_GetVoidPtr(const ImGuiStorage *self,
                                         ImGuiID key); 
CIMGUI_API void ImGuiStorage_SetVoidPtr(ImGuiStorage *self, ImGuiID key,
                                        void *val);
CIMGUI_API int *ImGuiStorage_GetIntRef(ImGuiStorage *self, ImGuiID key,
                                       int default_val );
CIMGUI_API bool *ImGuiStorage_GetBoolRef(ImGuiStorage *self, ImGuiID key,
                                         bool default_val );
CIMGUI_API float *ImGuiStorage_GetFloatRef(ImGuiStorage *self, ImGuiID key,
                                           float default_val );
CIMGUI_API void **ImGuiStorage_GetVoidPtrRef(ImGuiStorage *self, ImGuiID key,
                                             void *default_val );
CIMGUI_API void ImGuiStorage_SetAllInt(ImGuiStorage *self, int val);
CIMGUI_API void ImGuiStorage_BuildSortByKey(ImGuiStorage *self);
typedef struct ImGuiListClipper_t {
  ImGuiContext *Ctx; 
  int DisplayStart;  
  int DisplayEnd;    
  int ItemsCount;    
  float ItemsHeight; 
  float StartPosY; 
  void *TempData;  
} ImGuiListClipper;
CIMGUI_API void ImGuiListClipper_Begin(ImGuiListClipper *self, int items_count,
                                       float items_height );
CIMGUI_API void ImGuiListClipper_End(
    ImGuiListClipper *self); 
CIMGUI_API bool ImGuiListClipper_Step(
    ImGuiListClipper
        *self); 
CIMGUI_API void ImGuiListClipper_IncludeItemByIndex(ImGuiListClipper *self,
                                                    int item_index);
CIMGUI_API void ImGuiListClipper_IncludeItemsByIndex(
    ImGuiListClipper *self, int item_begin,
    int item_end); 
CIMGUI_API void
ImGuiListClipper_IncludeRangeByIndices(ImGuiListClipper *self, int item_begin,
                                       int item_end); 
CIMGUI_API void ImGuiListClipper_ForceDisplayRangeByIndices(
    ImGuiListClipper *self, int item_begin,
    int item_end); 
typedef struct ImColor_t {
  ImVec4 Value;
} ImColor;
CIMGUI_API void ImColor_SetHSV(ImColor *self, float h, float s, float v,
                               float a );
CIMGUI_API ImColor ImColor_HSV(ImColor *self, float h, float s, float v,
                               float a );
typedef void (*ImDrawCallback)(const ImDrawList *parent_list,
                               const ImDrawCmd *cmd);
typedef struct ImDrawCmd_t {
  ImVec4 ClipRect; 
  ImTextureID TextureId;  
  unsigned int VtxOffset; 
  unsigned int IdxOffset; 
  unsigned int
      ElemCount; 
  ImDrawCallback UserCallback; 
  void *UserCallbackData; 
} ImDrawCmd;
CIMGUI_API ImTextureID ImDrawCmd_GetTexID(const ImDrawCmd *self);
typedef struct ImDrawVert_t {
  ImVec2 pos;
  ImVec2 uv;
  ImU32 col;
} ImDrawVert;
typedef struct ImDrawCmdHeader_t {
  ImVec4 ClipRect;
  ImTextureID TextureId;
  unsigned int VtxOffset;
} ImDrawCmdHeader;
typedef struct ImDrawChannel_t {
  ImVector_ImDrawCmd _CmdBuffer;
  ImVector_ImDrawIdx _IdxBuffer;
} ImDrawChannel;
typedef struct ImDrawListSplitter_t {
  int _Current;                     
  int _Count;                       
  ImVector_ImDrawChannel _Channels; 
} ImDrawListSplitter;
typedef struct ImDrawList_t {
  ImVector_ImDrawCmd CmdBuffer;  
  ImVector_ImDrawIdx IdxBuffer;  
  ImVector_ImDrawVert VtxBuffer; 
  ImDrawListFlags Flags;         
  unsigned int
      _VtxCurrentIdx; 
  ImDrawListSharedData *_Data; 
  const char *_OwnerName;      
  ImDrawVert *_VtxWritePtr; 
  ImDrawIdx *_IdxWritePtr;  
  ImVector_ImVec4 _ClipRectStack;       
  ImVector_ImTextureID _TextureIdStack; 
  ImVector_ImVec2 _Path;                
  ImDrawCmdHeader _CmdHeader; 
  ImDrawListSplitter
      _Splitter; 
  float _FringeScale; 
} ImDrawList;